meta: change package name from fallback to music-quiz

--- a/studio/package.json
+++ b/studio/package.json
@@ -1,6 +1,6 @@
 {
   "private": true,
-  "name": "sanity-eleventy-blog-studio",
+  "name": "music-quiz-studio",
   "version": "1.0.12",
   "main": "package.json",
   "author": "Sanity <hello@sanity.io>",
