--- a/web/package.json
+++ b/web/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sanity-eleventy-blog-web",
+  "name": "music-quiz-web",
   "version": "1.0.7",
   "description": "",
   "main": "index.js",
