--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "private": true,
-  "name": "sanity-eleventy-blog",
+  "name": "music-quiz",
   "version": "1.0.0",
   "scripts": {
     "build": "lerna run build --parallel",
