--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
-    "lerna": "^3.16.4"
+    "eslint-config-prettier": "^8.3.0",
+    "lerna": "^3.16.4",
+    "prettier": "^2.3.2"
   }
 }
