--- a/studio/package.json
+++ b/studio/package.json
@@ -22,6 +22,7 @@
     "@sanity/default-login": "^2.13.1",
     "@sanity/desk-tool": "^2.13.1",
     "date-fns": "^1.30.1",
+    "eslint-config": "^0.3.0",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "react-icons": "^3.11.0",
@@ -29,16 +30,16 @@
     "sanity-plugin-dashboard-widget-netlify": "^1.1.0"
   },
   "devDependencies": {
-    "babel-eslint": "^10.0.1",
-    "eslint": "^5.16.0",
+    "babel-eslint": "^10.1.0",
+    "eslint": "^7.31.0",
     "eslint-config-standard": "^12.0.0",
-    "eslint-config-standard-react": "^7.0.2",
-    "eslint-plugin-import": "^2.17.3",
-    "eslint-plugin-node": "^9.1.0",
-    "eslint-plugin-promise": "^4.1.1",
-    "eslint-plugin-react": "^7.13.0",
-    "eslint-plugin-standard": "^4.0.0",
-    "prettier-eslint-cli": "^4.7.1",
-    "typescript": "^2.9.2"
+    "eslint-config-standard-react": "^11.0.1",
+    "eslint-plugin-import": "^2.23.4",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^5.1.0",
+    "eslint-plugin-react": "^7.24.0",
+    "eslint-plugin-standard": "^5.0.0",
+    "prettier-eslint-cli": "^5.0.1",
+    "typescript": "^4.3.5"
   }
 }
