--- a/web/package.json
+++ b/web/package.json
@@ -23,5 +23,8 @@
     "luxon": "^1.19.3",
     "markdown-it": "^10.0.0",
     "markdown-it-anchor": "^5.2.5"
+  },
+  "dependencies": {
+    "@sanity/asset-utils": "^1.1.5"
   }
 }
