--- a/.prettierrc
+++ b/.prettierrc
@@ -1,5 +1,11 @@
 {
+  "arrowParens": "avoid",
+  "bracketSpacing": true,
+  "endOfLine": "lf",
+  "jsxSingleQuote": false,
   "printWidth": 100,
+  "semi": true,
   "singleQuote": false,
-  "semi": true
+  "tabWidth": 2,
+  "trailingComma": "all"
 }
