--- a/package.json
+++ b/package.json
@@ -13,8 +13,12 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
+    "@sanity/types": "^2.13.1",
     "eslint-config-prettier": "^8.3.0",
     "lerna": "^4.0.0",
     "prettier": "^2.3.2"
+  },
+  "dependencies": {
+    "@netlify/functions": "^0.7.2"
   }
 }
