--- a/studio/tsconfig.json
+++ b/studio/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "include": ["./node_modules/@sanity/base/types/**/*.ts", "./**/*.ts", "./**/*.tsx"],
   "compilerOptions": {
-    "jsx": "react"
+    "jsx": "react",
+    "resolveJsonModule": true
   }
 }
