--- a/web/package.json
+++ b/web/package.json
@@ -8,11 +8,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@netlify/functions": "^0.7.2",
+    "@netlify/plugin-nextjs": "^3.9.2",
+    "@sanity/asset-utils": "^1.2.3",
+    "@sanity/client": "^2.21.10",
+    "@sanity/image-url": "^1.0.1",
+    "dotenv": "^10.0.0",
+    "groq": "^2.15.0",
     "next": "12.0.3",
-    "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react": "17.0.2"
   },
   "devDependencies": {
+    "@sanity/types": "^2.13.1",
     "@types/node": "16.11.7",
     "@types/react": "17.0.34",
     "eslint": "7.32.0",
