--- a/package.json
+++ b/package.json
@@ -16,5 +16,9 @@
     "eslint-config-prettier": "^8.3.0",
     "lerna": "^4.0.0",
     "prettier": "^2.3.2"
+  },
+  "dependencies": {
+    "@netlify/plugin-nextjs": "^3.9.2",
+    "next": "^12.0.4"
   }
 }
