--- a/web/package.json
+++ b/web/package.json
@@ -9,15 +9,13 @@
   },
   "dependencies": {
     "@netlify/functions": "^0.7.2",
-    "@netlify/plugin-nextjs": "^3.9.2",
     "@sanity/asset-utils": "^1.2.3",
     "@sanity/client": "^2.21.10",
     "@sanity/image-url": "^1.0.1",
     "dotenv": "^10.0.0",
     "groq": "^2.15.0",
-    "next": "12.0.3",
-    "react-dom": "17.0.2",
-    "react": "17.0.2"
+    "react": "17.0.2",
+    "react-dom": "17.0.2"
   },
   "devDependencies": {
     "@sanity/types": "^2.13.1",
