--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   },
   "dependencies": {
     "@netlify/plugin-nextjs": "^3.9.2",
-    "next": "^12.0.4"
+    "next": "^12.0.4",
+    "react": "17.0.2",
+    "react-dom": "17.0.2"
   }
 }
