--- a/web/package.json
+++ b/web/package.json
@@ -13,9 +13,7 @@
     "@sanity/client": "^2.21.10",
     "@sanity/image-url": "^1.0.1",
     "dotenv": "^10.0.0",
-    "groq": "^2.15.0",
-    "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "groq": "^2.15.0"
   },
   "devDependencies": {
     "@sanity/types": "^2.13.1",
