--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "lerna run dev --parallel",
     "format": "lerna run format",
     "build-studio": "lerna bootstrap && cd studio && npm run build",
-    "build-web": "lerna bootstrap && cd web && npm run build",
+    "build-web": "lerna bootstrap && next build web",
     "lint": "lerna run lint",
     "postinstall": "lerna bootstrap",
     "test": "echo \"Error: no test specified\" && exit 1"
