--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.0",
     "cross-env": "^7.0.3",
     "eslint-config-prettier": "^8.3.0",
     "lerna": "^4.0.0",
-    "prettier": "^2.3.2"
+    "postcss": "^8.3.11",
+    "prettier": "^2.3.2",
+    "tailwindcss": "^2.2.19"
   },
   "dependencies": {
     "@netlify/functions": "^0.7.2",
