--- a/package.json
+++ b/package.json
@@ -13,12 +13,20 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
+    "@storybook/addon-actions": "^6.3.12",
+    "@storybook/addon-essentials": "^6.3.12",
+    "@storybook/addon-links": "^6.3.12",
+    "@storybook/addon-postcss": "^2.0.0",
+    "@storybook/react": "^6.3.12",
+    "@types/react": "17.0.34",
+    "@types/shuffle-seed": "^1.1.0",
     "autoprefixer": "^10.4.0",
     "cross-env": "^7.0.3",
     "eslint-config-prettier": "^8.3.0",
     "lerna": "^4.0.0",
     "postcss": "^8.3.11",
     "prettier": "^2.3.2",
+    "prettier-plugin-tailwind": "^2.2.12",
     "tailwindcss": "^2.2.19"
   },
   "dependencies": {
@@ -31,6 +39,7 @@
     "groq": "^2.15.0",
     "next": "^12.0.4",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "shuffle-seed": "^1.1.6"
   }
 }
