--- a/studio/vercel.json
+++ b/studio/vercel.json
@@ -1,8 +1,9 @@
 {
   "rewrites": [
     {
-      "source": "/*",
-      "destination": "/"
+      "source": "/.+",
+      "destination": "/",
+      "status": 200
     }
   ]
 }
