remove status property from rewrite

--- a/studio/vercel.json
+++ b/studio/vercel.json
@@ -2,8 +2,7 @@
   "rewrites": [
     {
       "source": "/.+",
-      "destination": "/",
-      "status": 200
+      "destination": "/"
     }
   ]
 }
