--- a/web/package.json
+++ b/web/package.json
@@ -25,7 +25,6 @@
     "eslint-config-next": "12.0.3",
     "eslint-config-prettier": "^8.3.0",
     "postcss": "^8.3.11",
-    "prettier-plugin-tailwind": "^2.2.12",
     "tailwindcss": "^2.2.19",
     "typescript": "4.4.4"
   },
@@ -38,7 +37,10 @@
     "groq": "^2.15.0",
     "next": "^12.0.4",
     "react": "17.0.2",
+    "react-confetti": "^6.0.1",
     "react-dom": "17.0.2",
-    "shuffle-seed": "^1.1.6"
+    "react-use": "^17.3.1",
+    "shuffle-seed": "^1.1.6",
+    "unique-names-generator": "^4.6.0"
   }
 }
