--- a/web/package.json
+++ b/web/package.json
@@ -34,6 +34,7 @@
     "@sanity/image-url": "^1.0.1",
     "@tailwindcss/aspect-ratio": "^0.3.0",
     "groq": "^2.15.0",
+    "leven": "^4.0.0",
     "next": "^12.0.4",
     "react": "17.0.2",
     "react-confetti": "^6.0.1",
