--- a/web/package.json
+++ b/web/package.json
@@ -25,10 +25,13 @@
     "eslint-config-next": "12.0.3",
     "eslint-config-prettier": "^8.3.0",
     "postcss": "^8.3.11",
+    "sass": "^1.44.0",
     "tailwindcss": "^2.2.19",
     "typescript": "4.4.4"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^0.1.1",
+    "@radix-ui/react-icons": "^1.0.3",
     "@sanity/asset-utils": "^1.2.3",
     "@sanity/client": "^2.21.10",
     "@sanity/image-url": "^1.0.1",
