--- a/web/package.json
+++ b/web/package.json
@@ -8,25 +8,33 @@
     "start": "next start",
     "lint": "next lint",
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "build-storybook": "build-storybook",
+    "test:e2e": "jest --watch --config jest.config.e2e.ts"
   },
   "devDependencies": {
     "@babel/core": "^7.16.0",
     "@sanity/types": "^2.13.1",
     "@storybook/addon-postcss": "^2.0.0",
     "@storybook/react": "^6.3.12",
+    "@types/jest": "^27.0.3",
+    "@types/jest-environment-puppeteer": "^4.4.1",
     "@types/node": "16.11.7",
+    "@types/puppeteer": "^5.4.4",
     "@types/react": "17.0.34",
     "@types/shuffle-seed": "^1.1.0",
     "autoprefixer": "^10.4.0",
-    "babel-loader": "^8.2.3",
     "cross-env": "^7.0.3",
     "eslint": "7.32.0",
     "eslint-config-next": "12.0.3",
     "eslint-config-prettier": "^8.3.0",
+    "jest": "^27.4.2",
     "postcss": "^8.3.11",
+    "puppeteer": "^12.0.1",
+    "puppeteer-core": "^12.0.1",
     "sass": "^1.44.0",
     "tailwindcss": "^2.2.19",
+    "ts-jest": "^27.0.7",
+    "ts-node": "^10.4.0",
     "typescript": "4.4.4"
   },
   "dependencies": {
