--- a/package.json
+++ b/package.json
@@ -14,8 +14,6 @@
   },
   "devDependencies": {
     "lerna": "^4.0.0",
-    "postcss": "^8.4.4",
-    "prettier": "^2.5.0",
-    "prettier-plugin-tailwind": "^2.2.12"
+    "postcss": "^8.4.4"
   }
 }
