--- a/web/package.json
+++ b/web/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
-    "test:e2e": "jest --watch --config jest.config.e2e.ts"
+    "test:e2e": "jest --watch --config jest.config.e2e.ts",
+    "format:check": "prettier --check .",
+    "format-all-files": "prettier --write ."
   },
   "devDependencies": {
     "@babel/core": "^7.16.0",
@@ -29,6 +31,8 @@
     "eslint-config-prettier": "^8.3.0",
     "jest": "^27.4.2",
     "postcss": "^8.3.11",
+    "prettier": "^2.5.0",
+    "prettier-plugin-tailwind": "^2.2.12",
     "puppeteer": "^12.0.1",
     "puppeteer-core": "^12.0.1",
     "sass": "^1.44.0",
