--- a/studio/package.json
+++ b/studio/package.json
@@ -13,21 +13,22 @@
     "test": "sanity check"
   },
   "dependencies": {
-    "@sanity/base": "^2.13.1",
-    "@sanity/cli": "^2.13.1",
-    "@sanity/components": "^2.13.0",
-    "@sanity/core": "^2.13.1",
-    "@sanity/dashboard": "^2.13.1",
-    "@sanity/default-layout": "^2.13.1",
-    "@sanity/default-login": "^2.13.1",
-    "@sanity/desk-tool": "^2.13.1",
+    "@sanity/base": "^2.22.3",
+    "@sanity/cli": "^2.22.3",
+    "@sanity/components": "^2.14.0",
+    "@sanity/core": "^2.22.3",
+    "@sanity/dashboard": "^2.22.3",
+    "@sanity/default-layout": "^2.22.3",
+    "@sanity/default-login": "^2.22.3",
+    "@sanity/desk-tool": "^2.22.3",
     "date-fns": "^1.30.1",
     "eslint-config": "^0.3.0",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "react-icons": "^3.11.0",
     "sanity-plugin-dashboard-widget-document-list": "^0.0.13",
-    "sanity-plugin-dashboard-widget-netlify": "^1.1.0"
+    "sanity-plugin-dashboard-widget-netlify": "^1.1.0",
+    "styled-components": "^5.2.0"
   },
   "devDependencies": {
     "babel-eslint": "^10.1.0",
