--- a/.gitignore
+++ b/.gitignore
@@ -2,12 +2,9 @@
 .DS_Store
 
 # Dependency directories
-/node_modules
+node_modules
 
 # lerna files
 /lerna-debug.log
-
-# Local Netlify folder
-.netlify
 
 serviceAccountKey.json
