--- a/studio/package.json
+++ b/studio/package.json
@@ -31,6 +31,7 @@
     "styled-components": "^5.3.3"
   },
   "devDependencies": {
+    "@types/node": "^17.0.4",
     "babel-eslint": "^10.1.0",
     "eslint": "^8.6.0",
     "eslint-config-standard": "^12.0.0",
