--- a/web/tsconfig.json
+++ b/web/tsconfig.json
@@ -15,6 +15,12 @@
     "isolatedModules": true,
     "jsx": "preserve"
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
-  "exclude": ["node_modules"]
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "../common/**/*.ts"],
+  "exclude": ["node_modules"],
+  "references": [
+    {
+      "path": "../common/tsconfig.json",
+      "prepend": true
+    }
+  ]
 }
