--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -3,6 +3,10 @@ name: E2E tests
 on:
   issue_comment:
     types: [edited]
+  push:
+    paths:
+      - "web/**/*"
+      - "common/**/*"
 
 jobs:
   capture_vercel_preview_url:
