--- a/studio/package.json
+++ b/studio/package.json
@@ -5,7 +5,7 @@
   "main": "package.json",
   "author": "Sanity <hello@sanity.io>",
   "scripts": {
-    "dev": "sanity start",
+    "dev": "sanity dev",
     "format": "prettier-eslint --write \"**/*.js\" \"!node_modules/**\"",
     "build": "sanity build",
     "graphql-deploy": "sanity graphql deploy --playground",
@@ -13,34 +13,27 @@
     "test": "sanity check"
   },
   "dependencies": {
-    "@sanity/base": "^2.35.2",
-    "@sanity/cli": "^2.35.0",
-    "@sanity/components": "^2.14.0",
-    "@sanity/core": "^2.35.0",
-    "@sanity/dashboard": "^2.35.2",
-    "@sanity/default-layout": "^2.35.2",
-    "@sanity/default-login": "^2.35.2",
-    "@sanity/desk-tool": "^2.35.2",
+    "@sanity/cli": "^3.8.2",
+    "@sanity/client": "^5.4.2",
     "date-fns": "^2.29.3",
     "eslint-config": "^0.3.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-icons": "^4.6.0",
-    "sanity-plugin-dashboard-widget-document-list": "^0.0.13",
-    "sanity-plugin-dashboard-widget-netlify": "^1.3.1",
-    "styled-components": "^5.3.6"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-icons": "^4.8.0",
+    "sanity": "^3.8.2",
+    "styled-components": "^5.3.9"
   },
   "devDependencies": {
-    "@sanity/types": "^2.35.0",
+    "@sanity/types": "^3.8.2",
     "babel-eslint": "^10.1.0",
-    "eslint": "^8.28.0",
+    "eslint": "^8.37.0",
     "eslint-config-standard": "^17.0.0",
-    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^6.1.1",
-    "eslint-plugin-react": "^7.31.11",
+    "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-standard": "^5.0.0",
     "prettier-eslint-cli": "^7.1.0",
-    "typescript": "^4.9.3"
+    "typescript": "^5.0.3"
   }
 }
