--- a/studio/tsconfig.json
+++ b/studio/tsconfig.json
@@ -1,5 +1,9 @@
 {
-  "include": ["./node_modules/@sanity/base/types/**/*.ts", "./**/*.ts", "./**/*.tsx"],
+  "include": [
+    "./node_modules/@sanity/base/types/**/*.ts",
+    "./**/*.ts",
+    "./**/*.tsx"
+  ],
   "compilerOptions": {
     "jsx": "react",
     "resolveJsonModule": true
