--- a/web/package.json
+++ b/web/package.json
@@ -7,18 +7,20 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build",
     "test:e2e": "jest --watch --config jest.config.e2e.ts",
     "ci-test:e2e": "jest --config jest.config.e2e.ts --coverage",
     "format:check": "prettier --check .",
-    "format-all-files": "prettier --write ."
+    "format:fix": "prettier --write ."
   },
   "devDependencies": {
     "@babel/core": "^7.21.8",
     "@sanity/types": "^3.10.0",
+    "@storybook/addon-essentials": "^7.0.9",
+    "@storybook/addon-links": "^7.0.9",
     "@storybook/addon-postcss": "^2.0.0",
-    "@storybook/react": "^7.0.9",
+    "@storybook/nextjs": "^7.0.9",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@types/jest": "^29.5.1",
     "@types/jest-environment-puppeteer": "^5.0.3",
@@ -28,16 +30,20 @@
     "@types/shuffle-seed": "^1.1.0",
     "autoprefixer": "^10.4.14",
     "cross-env": "^7.0.3",
+    "css-loader": "^6.7.3",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.1",
     "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-storybook": "^0.6.12",
     "jest": "^29.5.0",
     "postcss": "^8.4.23",
     "prettier": "^2.8.8",
+    "prettier-config": "github:boyum/prettier-config",
     "prettier-plugin-tailwindcss": "^0.2.8",
     "puppeteer": "^20.1.1",
     "puppeteer-core": "^20.1.1",
     "sass": "^1.62.1",
+    "storybook": "^7.0.9",
     "tailwindcss": "^3.3.2",
     "ts-jest": "^29.1.0",
     "ts-node": "^10.9.1",
@@ -60,5 +66,6 @@
     "react-use": "^17.4.0",
     "shuffle-seed": "^1.1.6",
     "unique-names-generator": "^4.7.1"
-  }
+  },
+  "prettier": "prettier-config"
 }
