--- a/web/.eslintrc.json
+++ b/web/.eslintrc.json
@@ -1,5 +1,5 @@
 {
-  "extends": "next/core-web-vitals",
+  "extends": ["next/core-web-vitals", "plugin:storybook/recommended"],
   "rules": {
     "import/no-default-export": "error"
   }
