--- a/web/.eslintrc.json
+++ b/web/.eslintrc.json
@@ -1,6 +1,4 @@
 {
   "extends": ["next/core-web-vitals", "plugin:storybook/recommended"],
-  "rules": {
-    "import/no-default-export": "error"
-  }
+  "rules": {}
 }
