--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
     "build-web": "cross-env NODE_ENV=production && lerna bootstrap && cd web && npm run build",
     "lint": "lerna run lint --parallel",
     "lint:fix": "lerna run lint:fix --parallel",
-    "postinstall": "lerna bootstrap",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
-    "lerna": "^6.6.2",
+    "lerna": "^7.0.1",
     "postcss": "^8.4.24"
-  }
+  },
+  "workspaces": [
+    "studio",
+    "web"
+  ]
 }
