--- a/studio/package.json
+++ b/studio/package.json
@@ -16,16 +16,16 @@
   },
   "dependencies": {
     "@sanity/cli": "^3.14.1",
-    "@sanity/client": "^6.1.5",
+    "@sanity/client": "^6.1.6",
     "date-fns": "^2.30.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
-    "sanity": "^3.13.0",
-    "styled-components": "^6.0.2"
+    "sanity": "^3.14.1",
+    "styled-components": "5.2"
   },
   "devDependencies": {
-    "@sanity/types": "^3.12.2",
+    "@sanity/types": "^3.14.1",
     "@typescript-eslint/parser": "^5.61.0",
     "eslint": "^8.44.0",
     "eslint-config": "^0.3.0",
@@ -38,7 +38,7 @@
     "eslint-plugin-standard": "^5.0.0",
     "prettier": "^2.8.8",
     "prettier-config": "github:boyum/prettier-config",
-    "typescript": "^5.1.5"
+    "typescript": "^5.1.6"
   },
   "prettier": "prettier-config"
 }
