--- a/web/package.json
+++ b/web/package.json
@@ -11,9 +11,7 @@
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
     "test:e2e": "jest --watch --config jest.config.e2e.ts",
-    "ci-test:e2e": "jest --config jest.config.e2e.ts --coverage",
-    "format:check": "prettier --check .",
-    "format:fix": "prettier --write ."
+    "ci-test:e2e": "jest --config jest.config.e2e.ts --coverage"
   },
   "devDependencies": {
     "@babel/core": "^7.22.10",
@@ -38,8 +36,6 @@
     "eslint-plugin-storybook": "^0.6.13",
     "jest": "^29.6.2",
     "postcss": "^8.4.27",
-    "prettier": "^3.0.1",
-    "prettier-config": "github:boyum/prettier-config",
     "prettier-plugin-tailwindcss": "^0.4.1",
     "puppeteer": "^21.0.1",
     "puppeteer-core": "^21.0.1",
@@ -67,6 +63,5 @@
     "react-use": "^17.4.0",
     "shuffle-seed": "^1.1.6",
     "unique-names-generator": "^4.7.1"
-  },
-  "prettier": "prettier-config"
+  }
 }
