chore: commonjs -> esm

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "music-quiz",
   "version": "1.0.0",
   "private": true,
+  "type": "module",
   "workspaces": [
     "studio",
     "web"
