ci: update dependabot patterns

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -7,19 +7,19 @@ updates:
     groups:
       storybook:
         patterns:
-          - ^@storybook/*
-          - ^storybook$
+          - "@storybook/*"
+          - storybook
       sanity:
         patterns:
-          - ^@sanity/*
-          - ^groq$
-          - ^sanity$
+          - "@sanity/*"
+          - groq
+          - sanity
       puppeteer:
         patterns:
-          - ^@types/jest-environment-puppeteer$
-          - ^@types/puppeteer$
-          - ^puppeteer-core$
-          - ^puppeteer$
+          - "@types/jest-environment-puppeteer"
+          - "@types/puppeteer"
+          - puppeteer-core
+          - puppeteer
 
   - package-ecosystem: github-actions
     directory: /
