--- a/web/package.json
+++ b/web/package.json
@@ -17,13 +17,13 @@
   "dependencies": {
     "@radix-ui/react-icons": "^1.3.0",
     "@sanity/asset-utils": "^1.3.0",
-    "@sanity/client": "^6.15.5",
+    "@sanity/client": "^6.15.7",
     "@sanity/image-url": "^1.0.2",
     "firebase": "^10.9.0",
     "firebase-admin": "^12.0.0",
     "groq": "^3.35.2",
     "leven": "^4.0.0",
-    "next": "^14.1.3",
+    "next": "^14.1.4",
     "ordinal": "^1.0.3",
     "react": "18.2.0",
     "react-confetti": "^6.1.0",
@@ -32,36 +32,37 @@
     "unique-names-generator": "^4.7.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.24.0",
-    "@sanity/types": "^3.28.0",
-    "@storybook/addon-essentials": "^7.6.17",
-    "@storybook/addon-links": "^7.6.17",
-    "@storybook/addon-postcss": "^2.0.0",
-    "@storybook/nextjs": "^7.6.17",
+    "@babel/core": "^7.24.3",
+    "@sanity/types": "^3.35.2",
+    "@storybook/addon-essentials": "^8.0.4",
+    "@storybook/addon-links": "^8.0.4",
+    "@storybook/addon-styling-webpack": "^1.0.0",
+    "@storybook/addon-themes": "^8.0.4",
+    "@storybook/nextjs": "^8.0.4",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@types/jest": "^29.5.12",
     "@types/jest-environment-puppeteer": "^5.0.6",
-    "@types/node": "20.11.29",
+    "@types/node": "20.11.30",
     "@types/puppeteer": "^7.0.4",
-    "@types/react": "18.2.66",
+    "@types/react": "18.2.69",
     "@types/shuffle-seed": "^1.1.3",
-    "autoprefixer": "^10.4.18",
+    "autoprefixer": "^10.4.19",
     "cross-env": "^7.0.3",
     "css-loader": "^6.10.0",
     "eslint": "8.57.0",
-    "eslint-config-next": "14.1.3",
+    "eslint-config-next": "14.1.4",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-storybook": "^0.8.0",
     "jest": "^29.7.0",
-    "postcss": "^8.4.36",
+    "postcss": "^8.4.38",
     "prettier-plugin-tailwindcss": "^0.5.12",
-    "puppeteer": "^22.5.0",
-    "puppeteer-core": "^22.0.0",
+    "puppeteer": "^22.6.0",
+    "puppeteer-core": "^22.6.0",
     "sass": "^1.72.0",
-    "storybook": "^7.6.17",
+    "storybook": "^8.0.4",
     "tailwindcss": "^3.4.1",
     "ts-jest": "^29.1.2",
     "ts-node": "^10.9.2",
-    "typescript": "5.4.2"
+    "typescript": "5.4.3"
   }
 }
