--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "devDependencies": {
     "prettier": "^3.3.2",
     "prettier-config": "github:boyum/prettier-config",
-    "turbo": "^1.13.3"
-  }
+    "turbo": "^2.0.5"
+  },
+  "packageManager": "npm@10.8.1"
 }
