--- a/web/package.json
+++ b/web/package.json
@@ -15,15 +15,16 @@
     "test:e2e": "jest --watch --config jest.config.e2e.ts"
   },
   "dependencies": {
+    "@next/third-parties": "^14.2.4",
     "@radix-ui/react-icons": "^1.3.0",
     "@sanity/asset-utils": "^1.3.0",
-    "@sanity/client": "^6.18.1",
+    "@sanity/client": "^6.20.1",
     "@sanity/image-url": "^1.0.2",
     "firebase": "^10.12.2",
-    "firebase-admin": "^12.1.1",
-    "groq": "^3.36.4",
+    "firebase-admin": "^12.2.0",
+    "groq": "^3.48.1",
     "leven": "^4.0.0",
-    "next": "^14.2.3",
+    "next": "^14.2.4",
     "ordinal": "^1.0.3",
     "react": "18.3.1",
     "react-confetti": "^6.1.0",
@@ -33,12 +34,12 @@
   },
   "devDependencies": {
     "@babel/core": "^7.24.7",
-    "@sanity/types": "^3.35.2",
-    "@storybook/addon-essentials": "^8.1.10",
-    "@storybook/addon-links": "^8.1.10",
+    "@sanity/types": "^3.48.1",
+    "@storybook/addon-essentials": "^8.1.11",
+    "@storybook/addon-links": "^8.1.11",
     "@storybook/addon-styling-webpack": "^1.0.0",
-    "@storybook/addon-themes": "^8.1.10",
-    "@storybook/nextjs": "^8.1.10",
+    "@storybook/addon-themes": "^8.1.11",
+    "@storybook/nextjs": "^8.1.11",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@types/jest": "^29.5.12",
     "@types/jest-environment-puppeteer": "^5.0.6",
@@ -57,12 +58,12 @@
     "postcss": "^8.4.38",
     "prettier-plugin-tailwindcss": "^0.6.5",
     "puppeteer": "^22.12.1",
-    "puppeteer-core": "^22.6.0",
+    "puppeteer-core": "^22.12.1",
     "sass": "^1.77.6",
-    "storybook": "^8.1.10",
+    "storybook": "^8.1.11",
     "tailwindcss": "^3.4.4",
     "ts-jest": "^29.1.5",
     "ts-node": "^10.9.2",
-    "typescript": "5.4.5"
+    "typescript": "5.5.2"
   }
 }
