--- a/web/package.json
+++ b/web/package.json
@@ -9,7 +9,7 @@
     "ci-test:e2e": "jest --config jest.config.e2e.ts --coverage",
     "dev": "next dev",
     "lint": "next lint",
-    "lint:fix": "next lint -- --fix",
+    "lint:fix": "next lint --fix",
     "start": "next start",
     "storybook": "storybook dev -p 6006",
     "test:e2e": "jest --watch --config jest.config.e2e.ts"
@@ -20,6 +20,7 @@
     "@sanity/asset-utils": "^1.3.0",
     "@sanity/client": "^6.20.1",
     "@sanity/image-url": "^1.0.2",
+    "@vercel/analytics": "^1.4.1",
     "firebase": "^10.12.2",
     "firebase-admin": "^12.2.0",
     "groq": "^3.48.1",
