--- a/web/package.json
+++ b/web/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "build-storybook": "storybook build",
     "ci-test:e2e": "jest --config jest.config.e2e.ts --coverage",
-    "dev": "next dev",
+    "dev": "next dev --turbopack",
     "lint": "next lint",
     "lint:fix": "next lint --fix",
     "start": "next start",
@@ -15,7 +15,7 @@
     "test:e2e": "jest --watch --config jest.config.e2e.ts"
   },
   "dependencies": {
-    "@next/third-parties": "^14.2.4",
+    "@next/third-parties": "15.1.0",
     "@radix-ui/react-icons": "^1.3.0",
     "@sanity/asset-utils": "^1.3.0",
     "@sanity/client": "^6.20.1",
@@ -26,11 +26,11 @@
     "firebase-admin": "^12.2.0",
     "groq": "^3.48.1",
     "leven": "^4.0.0",
-    "next": "^14.2.4",
+    "next": "15.1.0",
     "ordinal": "^1.0.3",
-    "react": "18.3.1",
+    "react": "19.0.0",
     "react-confetti": "^6.1.0",
-    "react-dom": "18.3.1",
+    "react-dom": "19.0.0",
     "react-use": "^17.5.0",
     "unique-names-generator": "^4.7.1"
   },
@@ -47,13 +47,13 @@
     "@types/jest-environment-puppeteer": "^5.0.6",
     "@types/node": "20.14.9",
     "@types/puppeteer": "^7.0.4",
-    "@types/react": "18.3.3",
+    "@types/react": "19.0.1",
     "@types/shuffle-seed": "^1.1.3",
     "autoprefixer": "^10.4.19",
     "cross-env": "^7.0.3",
     "css-loader": "^7.1.2",
     "eslint": "9.6.0",
-    "eslint-config-next": "14.2.4",
+    "eslint-config-next": "15.1.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-storybook": "^0.8.0",
     "jest": "^29.7.0",
@@ -67,5 +67,8 @@
     "ts-jest": "^29.1.5",
     "ts-node": "^10.9.2",
     "typescript": "5.5.3"
+  },
+  "overrides": {
+    "@types/react": "19.0.1"
   }
 }
